# argparse-type-helper

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: format.yml  publish.yml  python.yml
argparse_type_helper/: __init__.py  _decorators.py  _docstring.py  _inference.py  _registry.py  _types.py  _utils.py  targs.py  utils.py
targs/: targs.py  utils.py
tests/: example.py  example_groups.py  example_subcommands.py  test_basic.py  test_create_parser.py  test_docstring.py  test_groups.py  test_subcommands.py  test_type_inference.py
