[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "argparse-type-helper"
dynamic = ["version"]
dependencies = []
requires-python = ">=3.12"
authors = [{ name = "lljbash", email = "lljbash@gmail.com" }]
description = "an easy-to-integrate typed argument parser"
readme = "README.md"
keywords = ["argparse", "typing", "argument parser", "type hints", "typed arguments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
"Homepage" = "https://github.com/lljbash/argparse-type-helper"
"Bug Tracker" = "https://github.com/lljbash/argparse-type-helper/issues"

[tool.setuptools_scm]

[tool.black]
include = '\.pyi?$'
required-version = "26"
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.basedpyright]
include = ["argparse_type_helper", "tests"]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
deprecateTypingAliases = true

[dependency-groups]
dev = [
    "basedpyright>=1.29.2",
    "black~=26.0",
    "isort>=6.0.1",
    "pytest>=8.0.0",
]
